# gobang

./: .gitignore  CMakeLists.txt  ConsoleView.h  Defs.h  Eveluation.cpp  Eveluation.h  Main.cpp  define.h
